--- a/_posts/2021-01-01-4012.md
+++ b/_posts/2021-01-01-4012.md
@@ -11,6 +11,8 @@ Each team was given a set of VEX controller and motors. We were limited to only 
 <img src="/assets/images/4012_demo.gif" width="300"/>
 <div style="text-align: center"><em>Competing with other robots</em></div>
 
+<p align="center"><iframe height="420" src="http://centiLinda.github.io/portfolio/assets/images/4012_test.mp4" frameborder="0" allowfullscreen></iframe></p>
+
 <img src="/assets/images/4012_car.png" width="400"/>
 <div style="text-align: center"><em>Our robot "Chili Crab"</em></div>
 
