--- a/_posts/2021-01-01-4012.md
+++ b/_posts/2021-01-01-4012.md
@@ -13,6 +13,10 @@ Each team was given a set of VEX controller and motors. We were limited to only 
 
 <p align="center"><iframe height="420" src="http://centiLinda.github.io/portfolio/assets/images/4012_test.mp4" frameborder="0" allowfullscreen></iframe></p>
 
+<p align="center"><video height="420" controls>
+  <source type="video/mp4" src="http://centiLinda.github.io/portfolio/assets/images/4012_test.mp4">
+</video></p>
+
 <img src="/assets/images/4012_car.png" width="400"/>
 <div style="text-align: center"><em>Our robot "Chili Crab"</em></div>
 
