--- a/_posts/2018-10-01-SAUVC.md
+++ b/_posts/2018-10-01-SAUVC.md
@@ -8,13 +8,13 @@ layout: post
 
 The competition was unfortunately paused for 2 years due to the pandemic. I now serve as a technical consultant for the new team to prepare for SAUVC 2022.
 
-<img src="/assets/images/sauvc_image.png" width="600"/>
+<img src="http://centiLinda.github.io/portfolio/assets/images/sauvc_image.png" width="600"/>
 <div style="text-align: center"><em>AUV version2 from Team MECAtron</em></div>
 
-<img src="/assets/images/sauvc_wiring.png" width="700"/>
+<img src="http://centiLinda.github.io/portfolio/assets/images/sauvc_wiring.png" width="700"/>
 <div style="text-align: center"><em>Circuit diagram</em></div>
 
-<img src="/assets/images/sauvc_test.jpeg" width="500"/>
+<img src="http://centiLinda.github.io/portfolio/assets/images/sauvc_test.jpeg" width="500"/>
 <div style="text-align: center"><em>Water test in NTU swimming pool</em></div>
 
 ---
