--- a/_posts/2019-08-01-URECA.md
+++ b/_posts/2019-08-01-URECA.md
@@ -4,7 +4,7 @@ layout: post
 ---
 <div style="text-align: left"><u>Aug 2019 - Jun 2020</u></div>
 
-<img src="/assets/images/ureca_poster.png" width="700"/>
+<img src="http://centiLinda.github.io/portfolio/assets/images/ureca_poster.png" width="700"/>
 <div style="text-align: center"><em>Research poster</em></div>
 
 ---
