--- a/_posts/2019-08-02-2012.md
+++ b/_posts/2019-08-02-2012.md
@@ -8,14 +8,13 @@ MA2012 was a Year-2 introductory course to Arduino and hardware electronics. Eac
 
 Our team's arena was an `interactive maze with a gesture-controlled mini vehicle`. I was the team leader and designer for the mini vehicle.
 
-<img src="/assets/images/2012_video.gif" width="500"/>
+<p align="center"><video height="500" controls>
+  <source type="video/mov" src="http://centiLinda.github.io/portfolio/assets/images/2012_video.mov">
+</video></p>
 <div style="text-align: center"><em>Demo</em></div>
 
-<img src="/assets/images/2012_mini_car.jpg" width="300"/>
+<img src="http://centiLinda.github.io/portfolio/assets/images/2012_mini_car.jpg" width="300"/>
 <div style="text-align: center"><em>Gesture-controlled mini vehicle</em></div>
-
-<img src="/assets/images/2012_diagram.jpg" width="400"/>
-<div style="text-align: center"><em>Circuit diagram</em></div>
 
 ---
 
