--- a/_posts/2019-08-03-Dyson.md
+++ b/_posts/2019-08-03-Dyson.md
@@ -8,10 +8,14 @@ EG9003 was a collaborative course between Dyson and NTU. We were guide through t
 
 Our team’s product was Medicus, an `autonomous pill dispenser for the elderly`. I was the team leader and designer of the dispenser.
 
-<img src="/assets/images/9003_with_cover.gif" width="500"/>
+<p align="center"><video height="420" controls>
+  <source type="video/mov" src="http://centiLinda.github.io/portfolio/assets/images/9003_demo.mov">
+</video></p>
 <div style="text-align: center"><em>Demo</em></div>
 
-<img src="/assets/images/9003_demo_small.gif" width="400"/>
+<p align="center"><video height="420" controls>
+  <source type="video/mp4" src="http://centiLinda.github.io/portfolio/assets/images/9003_demo_small.mp4">
+</video></p>
 <div style="text-align: center"><em>Pill dispensing mechanism</em></div>
 
 ---
