--- a/_posts/2020-01-01-EID.md
+++ b/_posts/2020-01-01-EID.md
@@ -10,11 +10,13 @@ Our team’s design was `a retractable wheel that can be attached to common trol
 
 Unfortunately, the development was paused due to the pandemic.
 
-<img src="/assets/images/EID_draft.jpg" width="500"/>
+<img src="http://centiLinda.github.io/portfolio/assets/images/EID_draft.jpg" width="500"/>
 <div style="text-align: center"><em>Design draft</em></div>
 
-<img src="/assets/images/EID_cad.gif" width="500"/>
+<p align="center"><video height="500" controls>
+  <source type="video/mov" src="http://centiLinda.github.io/portfolio/assets/images/EID_cad.mov">
+</video></p>
 <div style="text-align: center"><em>CAD design</em></div>
 
-<img src="/assets/images/EID_printed.jpg" width="500"/>
+<img src="http://centiLinda.github.io/portfolio/assets/images/EID_printed.jpg" width="500"/>
 <div style="text-align: center"><em>3D printed prototype</em></div>
