--- a/_posts/2020-01-02-3001.md
+++ b/_posts/2020-01-02-3001.md
@@ -6,8 +6,8 @@ layout: post
 
 MA3001 was a Year-3 engineering course on mechanism design and calculations. The team project was to design a `sugarcane juice extraction machine` using a combination of gears and belt drive.
 
-<img src="/assets/images/3001_CAD.png" width="500"/>
-<img src="/assets/images/3001_view.png" width="500"/>
+<img src="http://centiLinda.github.io/portfolio/assets/images/3001_CAD.png" width="500"/>
+<img src="http://centiLinda.github.io/portfolio/assets/images/3001_view.png" width="500"/>
 <div style="text-align: center"><em>Sugarcane juice extraction machine</em></div>
 
 The selected components need to deliver the desired power and at the same time have decent life cycle for real applications.
