--- a/_posts/2021-05-01-Hope.md
+++ b/_posts/2021-05-01-Hope.md
@@ -8,20 +8,24 @@ I worked as a `mechanical engineer` in HOPE Technik for my summer internship. HO
 
 I was working with <em>Ellemento Farming</em>, an urban farming project aims to `achieve full automation from seeding to harvesting`. I worked on different sub-systems such as the seeder, transplanter, harvester to fine tune the end effectors and improve the design to achieve higher accuracy. 
 
-<img src="/assets/images/hope_transplant.gif" width="300"/>
+<p align="center"><video height="300" controls>
+  <source type="video/mov" src="http://centiLinda.github.io/portfolio/assets/images/hope_transplant.mov">
+</video></p>
 <div style="text-align: center"><em>Transplanter</em></div>
 
-<img src="/assets/images/hope_cut.gif" width="600"/>
+<p align="center"><video height="600" controls>
+  <source type="video/mov" src="http://centiLinda.github.io/portfolio/assets/images/hope_cut.mov">
+</video></p>
 <div style="text-align: center"><em>Harvester</em></div>
 
-<img src="/assets/images/hope_farmer.jpg" width="600"/>
+<img src="http://centiLinda.github.io/portfolio/assets/images/hope_farmer.jpg" width="600"/>
 <div style="text-align: center"><em>Happy farmers</em></div>
 
 ---
 
 I manufactured tools and holders for the end effectors using 3D printing, waterjet cutting, and sheet metal bending. One of the pot locking mechanism I designed was implemented on the final prototype.
 
-<img src="/assets/images/hope_demo.gif" width="500"/>
+<img src="http://centiLinda.github.io/portfolio/assets/images/hope_demo.gif" width="500"/>
 <div style="text-align: center"><em>Locking mechanism (sent from my supervisor after my internship)</em></div>
-<img src="/assets/images/hope_pot.gif" width="500"/>
+<img src="http://centiLinda.github.io/portfolio/assets/images/hope_pot.gif" width="500"/>
 <div style="text-align: center"><em>The pot is locked by a mini pneumatic cylinder</em></div>
