--- a/_posts/2021-08-01-4825.md
+++ b/_posts/2021-08-01-4825.md
@@ -10,10 +10,10 @@ Our team’s idea was to develop `a robotic arm that can play Gomoku (five-in-a-
 
 I was the team leader and mechanical engineer in charge of the design. Several designs were developed along the way to increase arm stability and accuracy.
 
-<img src="/assets/images/4825_1.jpg" width="400"/>
+<img src="http://centiLinda.github.io/portfolio/assets/images/4825_1.jpg" width="400"/>
 <div style="text-align: center"><em>Version 1</em></div>
 
-<img src="/assets/images/4825_2.jpg" width="600"/>
+<img src="http://centiLinda.github.io/portfolio/assets/images/4825_2.jpg" width="600"/>
 <div style="text-align: center"><em>Version 2</em></div>
 
 <img src="http://centiLinda.github.io/portfolio/assets/images/4825_3.png" width="600"/>
