--- a/_posts/2020-08-01-Trinax.md
+++ b/_posts/2020-08-01-Trinax.md
@@ -8,17 +8,26 @@ I worked as a `R&D engineer` in Trinax for my professional internship. Trinax is
 
 My role was to develop hardware prototypes for their hardware-related projects. I also did research on the latest `interactive technologies` and presented to the market and software teams for future applications. This includes AR, holographic display, kinetic display, and different types of sensors.
 
-<img src="/assets/images/trinax_box.gif" width="500"/>
+<p align="center"><video height="500" controls>
+  <source type="video/mp4" src="http://centiLinda.github.io/portfolio/assets/images/trinax_box.mp4">
+</video></p>
 <div style="text-align: center"><em>Chanel fragrance card dispenser</em></div>
 
-<img src="/assets/images/trinax_spray.gif" width="500"/>
+<p align="center"><video height="500" controls>
+  <source type="video/mp4" src="http://centiLinda.github.io/portfolio/assets/images/trinax_spray.mp4">
+</video></p>
 <div style="text-align: center"><em>Dispense and spray mechanism</em></div>
 
 This dispenser system will dispense a fragrance card when activated by the user. Fragrance is sprayed immediately before user picks up the card. It consists of off-the-shelf card dispenser, servo motor, IR sensor, Arduino UNO, and Intel NUC for controlling the card dispenser. An enclosure was manufactured and the entire unit was shipped to Japan for evaluation at the end of my internship.
 
 ---
 
-<img src="/assets/images/trinax_wave.gif" width="400"/>
+<p align="center"><video height="400" controls>
+  <source type="video/mp4" src="http://centiLinda.github.io/portfolio/assets/images/trinax_wave.mp4">
+</video></p>
 
-<img src="/assets/images/trinax_diffuser.gif" width="300"/>
+<p align="center"><video height="300" controls>
+  <source type="video/mov" src="http://centiLinda.github.io/portfolio/assets/images/trinax_diffuser.mov">
+</video></p>
+
 <div style="text-align: center"><em>Other projects I worked on</em></div>
