--- a/_posts/2021-01-01-4012.md
+++ b/_posts/2021-01-01-4012.md
@@ -8,24 +8,20 @@ MA4012 was a Year-4 engineering course on mechatronics systems. Each team was to
 
 Each team was given a set of VEX controller and motors. We were limited to only use sensors and switches from the lab while other mechanical structures will be DIYed.
 
-<img src="/assets/images/4012_demo.gif" width="300"/>
-<div style="text-align: center"><em>Competing with other robots</em></div>
-
-<p align="center"><iframe height="420" src="http://centiLinda.github.io/portfolio/assets/images/4012_test.mp4" frameborder="0" allowfullscreen></iframe></p>
-
 <p align="center"><video height="420" controls>
   <source type="video/mp4" src="http://centiLinda.github.io/portfolio/assets/images/4012_test.mp4">
 </video></p>
+<div style="text-align: center"><em>Competing with other robots</em></div>
 
-<img src="/assets/images/4012_car.png" width="400"/>
+<img src="http://centiLinda.github.io/portfolio/assets/images/4012_car.png" width="400"/>
 <div style="text-align: center"><em>Our robot "Chili Crab"</em></div>
 
 ---
 
 I was the team leader and electrical engineer in charge of fine-tuning of the sensors and designing the sensor configurations. Due to equipment constrains we had to test out several configurations before deciding on the final version. We also added filters in the functions to stabilize the sensor readings.
 
-<img src="/assets/images/4012_1.png" width="600"/>
-<img src="/assets/images/4012_2.png" width="600"/>
-<img src="/assets/images/4012_3.png" width="600"/>
-<img src="/assets/images/4012_4.png" width="600"/>
+<img src="http://centiLinda.github.io/portfolio/assets/images/4012_1.png" width="600"/>
+<img src="http://centiLinda.github.io/portfolio/assets/images/4012_2.png" width="600"/>
+<img src="http://centiLinda.github.io/portfolio/assets/images/4012_3.png" width="600"/>
+<img src="http://centiLinda.github.io/portfolio/assets/images/4012_4.png" width="600"/>
 <div style="text-align: center"><em>Different versions of sensor configurations</em></div>
