change mov to mp4

--- a/_posts/2019-08-03-Dyson.md
+++ b/_posts/2019-08-03-Dyson.md
@@ -9,7 +9,7 @@ EG9003 was a collaborative course between Dyson and NTU. We were guide through t
 Our team’s product was Medicus, an `autonomous pill dispenser for the elderly`. I was the team leader and designer of the dispenser.
 
 <p align="center"><video height="420" controls>
-  <source type="video/mov" src="http://centiLinda.github.io/portfolio/assets/images/9003_demo.mov">
+  <source type="video/mp4" src="http://centiLinda.github.io/portfolio/assets/images/9003_demo.mp4">
 </video></p>
 <div style="text-align: center"><em>Demo</em></div>
 
