--- a/_posts/2020-08-01-Trinax.md
+++ b/_posts/2020-08-01-Trinax.md
@@ -27,7 +27,7 @@ This dispenser system will dispense a fragrance card when activated by the user.
 </video></p>
 
 <p align="center"><video height="300" controls>
-  <source type="video/mov" src="http://centiLinda.github.io/portfolio/assets/images/trinax_diffuser.mov">
+  <source type="video/mp4" src="http://centiLinda.github.io/portfolio/assets/images/trinax_diffuser.mp4">
 </video></p>
 
 <div style="text-align: center"><em>Other projects I worked on</em></div>
