--- a/_posts/2020-01-01-EID.md
+++ b/_posts/2020-01-01-EID.md
@@ -13,7 +13,7 @@ Unfortunately, the development was paused due to the pandemic.
 <img src="http://centiLinda.github.io/portfolio/assets/images/EID_draft.jpg" width="500"/>
 <div style="text-align: center"><em>Design draft</em></div>
 
-<p align="center"><video height="500" controls>
+<p align="center"><video width="500" controls>
   <source type="video/mp4" src="http://centiLinda.github.io/portfolio/assets/images/EID_cad.mp4">
 </video></p>
 <div style="text-align: center"><em>CAD design</em></div>
