--- a/_posts/2020-08-01-Trinax.md
+++ b/_posts/2020-08-01-Trinax.md
@@ -8,12 +8,12 @@ I worked as a `R&D engineer` in Trinax for my professional internship. Trinax is
 
 My role was to develop hardware prototypes for their hardware-related projects. I also did research on the latest `interactive technologies` and presented to the market and software teams for future applications. This includes AR, holographic display, kinetic display, and different types of sensors.
 
-<p align="center"><video height="500" controls>
+<p align="center"><video width="600" controls>
   <source type="video/mp4" src="http://centiLinda.github.io/portfolio/assets/images/trinax_box.mp4">
 </video></p>
 <div style="text-align: center"><em>Chanel fragrance card dispenser</em></div>
 
-<p align="center"><video height="500" controls>
+<p align="center"><video width="600" controls>
   <source type="video/mp4" src="http://centiLinda.github.io/portfolio/assets/images/trinax_spray.mp4">
 </video></p>
 <div style="text-align: center"><em>Dispense and spray mechanism</em></div>
@@ -22,11 +22,11 @@ This dispenser system will dispense a fragrance card when activated by the user.
 
 ---
 
-<p align="center"><video height="400" controls>
+<p align="center"><video height="300" controls>
   <source type="video/mp4" src="http://centiLinda.github.io/portfolio/assets/images/trinax_wave.mp4">
 </video></p>
 
-<p align="center"><video height="300" controls>
+<p align="center"><video height="500" controls>
   <source type="video/mp4" src="http://centiLinda.github.io/portfolio/assets/images/trinax_diffuser.mp4">
 </video></p>
 
