--- a/_posts/2021-05-01-Hope.md
+++ b/_posts/2021-05-01-Hope.md
@@ -8,12 +8,12 @@ I worked as a `mechanical engineer` in HOPE Technik for my summer internship. HO
 
 I was working with <em>Ellemento Farming</em>, an urban farming project aims to `achieve full automation from seeding to harvesting`. I worked on different sub-systems such as the seeder, transplanter, harvester to fine tune the end effectors and improve the design to achieve higher accuracy. 
 
-<p align="center"><video height="300" controls>
+<p align="center"><video height="500" controls>
   <source type="video/mp4" src="http://centiLinda.github.io/portfolio/assets/images/hope_transplant.mp4">
 </video></p>
 <div style="text-align: center"><em>Transplanter</em></div>
 
-<p align="center"><video height="300" controls>
+<p align="center"><video width="600" controls>
   <source type="video/mp4" src="http://centiLinda.github.io/portfolio/assets/images/hope_cut.mp4">
 </video></p>
 <div style="text-align: center"><em>Harvester</em></div>
