--- a/_posts/2019-08-03-Dyson.md
+++ b/_posts/2019-08-03-Dyson.md
@@ -8,12 +8,12 @@ EG9003 was a collaborative course between Dyson and NTU. We were guide through t
 
 Our team’s product was Medicus, an `autonomous pill dispenser for the elderly`. I was the team leader and designer of the dispenser.
 
-<p align="center"><video height="420" controls>
+<p align="center"><video height="400" controls>
   <source type="video/mp4" src="http://centiLinda.github.io/portfolio/assets/images/9003_demo.mp4">
 </video></p>
 <div style="text-align: center"><em>Demo</em></div>
 
-<p align="center"><video height="420" controls>
+<p align="center"><video width="400" controls>
   <source type="video/mp4" src="http://centiLinda.github.io/portfolio/assets/images/9003_demo_small.mp4">
 </video></p>
 <div style="text-align: center"><em>Pill dispensing mechanism</em></div>
