--- a/_posts/2019-08-01-URECA.md
+++ b/_posts/2019-08-01-URECA.md
@@ -15,6 +15,6 @@ The objective is to reduce the time that nurses need to be around a patient, as 
 
 ---
 
-After the 1-year URECA project, I assisted in the development of the autonomous hospital bed prototype. [(Appreciation letter)](/assets/images/Letter_of_Appreciation.pdf)
+After the 1-year URECA project, I assisted in the development of the autonomous hospital bed prototype. [(Appreciation letter)](http://centiLinda.github.io/portfolio/assets/images/Letter_of_Appreciation.pdf)
 
 I was the 2nd author in the publication of this project on [Sensors](https://www.mdpi.com/1424-8220/21/17/5711).
