update 4825 and FYP

--- a/_posts/2021-08-02-FYP.md
+++ b/_posts/2021-08-02-FYP.md
@@ -30,3 +30,11 @@ Software List:
 - PocketSphinx: light weight voice recognition engine
 - Slamware ROS SDK: mapping and navigation tool
 - YOLOv3 and OpenCV: object detection tool
+
+---
+{: data-content="Demos"}
+
+<p align="center"><video height="700" controls>
+  <source type="video/mp4" src="http://centiLinda.github.io/portfolio/assets/images/fyp_1.mp4">
+</video></p>
+<div style="text-align: center"><em>Listening to real-time voice command</em></div>
