--- a/_posts/2021-08-01-4825.md
+++ b/_posts/2021-08-01-4825.md
@@ -10,6 +10,8 @@ Our team’s idea was to develop `a robotic arm that can play Gomoku (five-in-a-
 
 I was the team leader and mechanical engineer in charge of the design. Several designs were developed along the way to increase arm stability and accuracy.
 
+---
+
 <p align="center"><video height="400" controls>
   <source type="video/mp4" src="http://centiLinda.github.io/portfolio/assets/images/4825_full.mp4">
 </video></p>
@@ -26,4 +28,4 @@ I was the team leader and mechanical engineer in charge of the design. Several d
 
 ---
 
-Our team won the 1st place in the final [presentation](http://centiLinda.github.io/portfolio/assets/images/4825_slides.pdf).
+Our team won the <b>1st</b> place in the final [presentation](http://centiLinda.github.io/portfolio/assets/images/4825_slides.pdf).
