--- a/_posts/2021-08-02-FYP.md
+++ b/_posts/2021-08-02-FYP.md
@@ -3,33 +3,43 @@ title: Final Year Project - Development of A Robotic Guide Dog
 layout: post
 ---
 <div style="text-align: left"><u>Aug 2021 - Present</u></div>
-The objective is to develop `a robotic guide dog` that has similar performance as a real guide dog. Consider that the cost for raising a real guide dog is high and the current availability for visually impaired people is not ideal, such robot will greatly improve the mobility of those in need.
+Guide dogs play an important role in the society by offering independent mobility to the visually impaired. However, there are only 7 guide dog users in Singapore due to the high cost of the training programme. This study aims to develop an experimental `robotic guide dog` that can perform basic guidance and navigation tasks. The user-friendly interface is designed to imitate real guide dog-human interactions.
 
 ---
-{: data-content="Plan"}
+{: data-content="Scope"}
 
-Stages of development:
-1. <b>[done]</b> Basic movement: turn left/right, straight-on, stop
-2. Guide to specific spot: find lift, find gate
-3. Speed control with force feedback
-4. Test in public areas and with real guide dog users
+4 Main Functions:
+1. <b>Speech Recognition</b>: Left, Right, Straight-on, Pause, Navigate, Cancel, Find Counter/Gate/Suitcase
+2. <b>Object Detection</b>: Identify and move to target object
+3. <b>Speed Adjustment</b>: Detect user's pulling force and match speed with user's speed
+4. <b>Navigation</b>: Move to target while avoiding obstacles
 
 ---
 {: data-content="Resources"}
 
 Hardware List:
 - Unitree A1 robot dog
-    - Raspberry Pi: WiFi access point, ROS master, camera vision
+    - Raspberry Pi: WiFi access point, ROS master
     - UP board: Low level joint control
-    - Intel RealSense camera: RGB and Depth
-    - Slamtec Slamware & RPLiDAR 2D: mapping and navigation
-- Jetson Nano: Ubuntu environment for ROS development and software testing
+- Nvidia Jetson Nano: Main computing unit
+- Slamtec RPLiDAR 2D (Mapper)
+- Arduino UNO + Load Cell + HX711: Force detection
+- ZED Stereo Camera
+- USB Microphone
+
+<img src="http://centiLinda.github.io/portfolio/assets/images/fyp_1.png" width="400"/>
+<div style="text-align: center"><em>Circuit diagram</em></div>
 
 Software List:
-- ROS Kinetic: robotics system to connect every function
-- PocketSphinx: light weight voice recognition engine
-- Slamware ROS SDK: mapping and navigation tool
-- YOLOv3 and OpenCV: object detection tool
+- Robot Operating System (ROS)
+- PocketSphinx (pocketsphinx): light weight voice recognition engine
+- Slamware (slamware_ros): mapping and navigation tool
+- Darknet and YOLOv3-tiny (darknet_ros): object detection tool
+- rosserial_python
+- zed_wrapper
+
+<img src="http://centiLinda.github.io/portfolio/assets/images/fyp_2.png" width="400"/>
+<div style="text-align: center"><em>ROS network</em></div>
 
 ---
 {: data-content="Demos"}
@@ -37,4 +47,28 @@ Software List:
 <p align="center"><video height="700" controls>
   <source type="video/mp4" src="http://centiLinda.github.io/portfolio/assets/images/fyp_1.mp4">
 </video></p>
-<div style="text-align: center"><em>Listening to real-time voice command</em></div>
+<div style="text-align: center"><em>Basic control</em></div>
+
+<p align="center"><video height="700" controls>
+  <source type="video/mp4" src="http://centiLinda.github.io/portfolio/assets/images/fyp_2.mp4">
+</video></p>
+<div style="text-align: center"><em>Demo in lab</em></div>
+
+<p align="center"><video height="700" controls>
+  <source type="video/mp4" src="http://centiLinda.github.io/portfolio/assets/images/fyp_3.mp4">
+</video></p>
+<div style="text-align: center"><em>Demo in lobby</em></div>
+
+<img src="http://centiLinda.github.io/portfolio/assets/images/fyp_3.jpg" width="400"/>
+
+<img src="http://centiLinda.github.io/portfolio/assets/images/fyp_4.jpg" width="400"/>
+
+<img src="http://centiLinda.github.io/portfolio/assets/images/fyp_5.jpg" width="400"/>
+<div style="text-align: center"><em>Prototype</em></div>
+
+---
+{: data-content="TODO"}
+- Upload source code to GitHub
+- Upload experiment results
+- Add conclusion & future development
+- Upload report (maybe?)
