--- a/_posts/2021-08-02-FYP.md
+++ b/_posts/2021-08-02-FYP.md
@@ -2,7 +2,7 @@
 title: Final Year Project - Development of A Robotic Guide Dog
 layout: post
 ---
-<div style="text-align: left"><u>Aug 2021 - Present</u></div>
+<div style="text-align: left"><u>Aug 2021 - Mat 2022</u></div>
 Guide dogs play an important role in the society by offering independent mobility to the visually impaired. However, there are only 7 guide dog users in Singapore due to the high cost of the training programme. This study aims to develop an experimental `robotic guide dog` that can perform basic guidance and navigation tasks. The user-friendly interface is designed to imitate real guide dog-human interactions.
 
 ---
@@ -27,7 +27,7 @@ Hardware List:
 - ZED Stereo Camera
 - USB Microphone
 
-<img src="http://centiLinda.github.io/portfolio/assets/images/fyp_1.png" width="400"/>
+<img src="http://centiLinda.github.io/portfolio/assets/images/fyp_1.png" width="600"/>
 <div style="text-align: center"><em>Circuit diagram</em></div>
 
 Software List:
@@ -38,7 +38,7 @@ Software List:
 - rosserial_python
 - zed_wrapper
 
-<img src="http://centiLinda.github.io/portfolio/assets/images/fyp_2.png" width="400"/>
+<img src="http://centiLinda.github.io/portfolio/assets/images/fyp_2.png" width="600"/>
 <div style="text-align: center"><em>ROS network</em></div>
 
 ---
@@ -49,21 +49,21 @@ Software List:
 </video></p>
 <div style="text-align: center"><em>Basic control</em></div>
 
-<p align="center"><video height="700" controls>
+<p align="center"><video height="400" controls>
   <source type="video/mp4" src="http://centiLinda.github.io/portfolio/assets/images/fyp_2.mp4">
 </video></p>
 <div style="text-align: center"><em>Demo in lab</em></div>
 
-<p align="center"><video height="700" controls>
+<p align="center"><video height="400" controls>
   <source type="video/mp4" src="http://centiLinda.github.io/portfolio/assets/images/fyp_3.mp4">
 </video></p>
 <div style="text-align: center"><em>Demo in lobby</em></div>
 
-<img src="http://centiLinda.github.io/portfolio/assets/images/fyp_3.jpg" width="400"/>
+<img src="http://centiLinda.github.io/portfolio/assets/images/fyp_3.JPG" width="400"/>
 
-<img src="http://centiLinda.github.io/portfolio/assets/images/fyp_4.jpg" width="400"/>
+<img src="http://centiLinda.github.io/portfolio/assets/images/fyp_4.JPG" width="400"/>
 
-<img src="http://centiLinda.github.io/portfolio/assets/images/fyp_5.jpg" width="400"/>
+<img src="http://centiLinda.github.io/portfolio/assets/images/fyp_5.JPG" width="400"/>
 <div style="text-align: center"><em>Prototype</em></div>
 
 ---
