--- a/_posts/2021-08-02-FYP.md
+++ b/_posts/2021-08-02-FYP.md
@@ -2,7 +2,7 @@
 title: Final Year Project - Development of A Robotic Guide Dog
 layout: post
 ---
-<div style="text-align: left"><u>Aug 2021 - Mat 2022</u></div>
+<div style="text-align: left"><u>Aug 2021 - May 2022</u></div>
 Guide dogs play an important role in the society by offering independent mobility to the visually impaired. However, there are only 7 guide dog users in Singapore due to the high cost of the training programme. This study aims to develop an experimental `robotic guide dog` that can perform basic guidance and navigation tasks. The user-friendly interface is designed to imitate real guide dog-human interactions.
 
 ---
