add github link

--- a/_posts/2021-08-02-FYP.md
+++ b/_posts/2021-08-02-FYP.md
@@ -42,6 +42,11 @@ Software List:
 <div style="text-align: center"><em>ROS network</em></div>
 
 ---
+{: data-content="Results"}
+
+- [GitHub repo](https://github.com/centiLinda/robotic_guide_dog)
+
+---
 {: data-content="Demos"}
 
 <p align="center"><video height="700" controls>
@@ -68,7 +73,6 @@ Software List:
 
 ---
 {: data-content="TODO"}
-- Upload source code to GitHub
 - Upload experiment results
 - Add conclusion & future development
 - Upload report (maybe?)
